baml_language/crates/baml_tests/snapshots/generic_call_ambiguity/baml_tests__generic_call_ambiguity__02_parser__generic_call.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "f"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM "K"
        WORD "K"
      COMMA ","
      GENERIC_PARAM "V"
        WORD "V"
      GREATER ">"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "k"
        COLON ":"
        TYPE_EXPR "K"
          WORD "K"
      COMMA ","
      PARAMETER
        WORD "v"
        COLON ":"
        TYPE_EXPR "V"
          WORD "V"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "V"
      WORD "V"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
    v
}"
        L_BRACE "{"
        WORD "v"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "GenericCallInArray"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "k"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      COMMA ","
      PARAMETER
        WORD "v"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string[]"
      WORD "string"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          CALL_EXPR
            PATH_EXPR
              WORD "f"
              GENERIC_ARGS
                LESS "<"
                TYPE_EXPR "int"
                  WORD "int"
                COMMA ","
                TYPE_EXPR "string"
                  WORD "string"
                GREATER ">"
            CALL_ARGS "(k, v)"
              L_PAREN "("
              WORD "k"
              COMMA ","
              WORD "v"
              R_PAREN ")"
          R_BRACKET "]"
        R_BRACE "}"

=== ERRORS ===
None
